' Generated by UML Generator
' Encoded: fLNBJiCm4BpdAtnCQIDnhX0gQgbKgQ1AvOOuk8u9AnoxifqUAFmxZcEdTanvY4lKpEwCTsVNwKnfB7LJiqoz0jzZYMj465RgHci9kqRJ5H5y2syKNMOlK594G196iynceJa3oZL5nmoXWejw9-aKRGsLLor2X9HKX4W9aX82WeTWOHvZ9vN7AXCKQqnGeZ1gsHNLzvQOZmBbiUhXMDOa7GIKZZctHoHC1yS5nCo5BoOXdo9fmKxYmxjuXu5R2yT7CmyDv0FL1ignh9GdFJubj0qjeHITztifoePeOVBNeFJLnhrVsp5qraxzk7hFEuLy6FUE-f6CGgPrnWKIOcIEhq6r0abLhSufuspzWIIk9AsmzA5yFqN-Tv15C2CDm_91QCpQaqlHx9Yjl1PAIonN_DaEsxk9TorCD7AsEirpIxqtumGHw3elVLd31Oxp_x-j6wiNTwPwU71QwakNjmG-T4UBxhIWfjEgkUOMK86njRE60Q6S04wkyY3x1qScQ2ZaFLexF76f3oJCt_QRTBO41SJDd9WzeRVyyCsKk_GVEqkL-hlLHv991g4l-7_eq7qWH57qRNhimc3-JW-7MnJlrm4XDYWEpYWlpR_79m
' URL: http://www.plantuml.com/plantuml/uml/fLNBJiCm4BpdAtnCQIDnhX0gQgbKgQ1AvOOuk8u9AnoxifqUAFmxZcEdTanvY4lKpEwCTsVNwKnfB7LJiqoz0jzZYMj465RgHci9kqRJ5H5y2syKNMOlK594G196iynceJa3oZL5nmoXWejw9-aKRGsLLor2X9HKX4W9aX82WeTWOHvZ9vN7AXCKQqnGeZ1gsHNLzvQOZmBbiUhXMDOa7GIKZZctHoHC1yS5nCo5BoOXdo9fmKxYmxjuXu5R2yT7CmyDv0FL1ignh9GdFJubj0qjeHITztifoePeOVBNeFJLnhrVsp5qraxzk7hFEuLy6FUE-f6CGgPrnWKIOcIEhq6r0abLhSufuspzWIIk9AsmzA5yFqN-Tv15C2CDm_91QCpQaqlHx9Yjl1PAIonN_DaEsxk9TorCD7AsEirpIxqtumGHw3elVLd31Oxp_x-j6wiNTwPwU71QwakNjmG-T4UBxhIWfjEgkUOMK86njRE60Q6S04wkyY3x1qScQ2ZaFLexF76f3oJCt_QRTBO41SJDd9WzeRVyyCsKk_GVEqkL-hlLHv991g4l-7_eq7qWH57qRNhimc3-JW-7MnJlrm4XDYWEpYWlpR_79m
' Generated on: 2025-11-28T22:04:23.180678800

@startuml
skinparam classAttributeIconSize 0
hide circle

class Cliente {
  -nombre: String
  -correo: String
  -direccion: String
  --
  +Cliente(nombre: String, correo: String, direccion: String)
  +getNombre(): String
  +setNombre(nombre: String): void
  +getCorreo(): String
  +setCorreo(correo: String): void
  +getDireccion(): String
  +setDireccion(direccion: String): void
}

class Main {
  +{static} main(args: String[]): void
}

class Pedido {
  -productos: List<Producto>
  -cliente: Cliente
  --
  +Pedido(cliente: Cliente)
  +getCliente(): Cliente
  +setCliente(cliente: Cliente): void
  +getProductos(): List<Producto>
  +setProductos(productos: List<Producto>): void
  +agregarProducto(p: Producto): void
  +calcularTotal(): double
  +mostrarInfo(): void
}

abstract class Producto {
  -nombre: String
  -precio: double
  --
  +Producto(nombre: String, precio: double)
  +getNombre(): String
  +setNombre(nombre: String): void
  +getPrecio(): double
  +setPrecio(precio: double): void
  +calcularPrecioFinal(): double
  +toString(): String
}

class ProductoDigital {
  -licencia: String
  --
  +ProductoDigital(nombre: String, precio: double, licencia: String)
  +getLicencia(): String
  +setLicencia(licencia: String): void
  +calcularPrecioFinal(): double
}

class ProductoFisico {
  -costeEnvio: double
  --
  +ProductoFisico(nombre: String, precio: double, costeEnvio: double)
  +getCosteEnvio(): double
  +setCosteEnvio(costeEnvio: double): void
  +calcularPrecioFinal(): double
}

Pedido o-- Producto
Pedido *-- Cliente
ProductoDigital --|> Producto
ProductoFisico --|> Producto
@enduml